# pycsou-mock-gd

./: README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/pycsou_mock_gd/: __init__.py
src/pycsou_mock_gd/opt/: __init__.py
src/pycsou_mock_gd/opt/solver/: __init__.py
src/pycsou_mock_gd_tests/: test_math.py
src/pycsou_mock_gd_tests/test_opt/: test_solver.py  test_stop.py
